fix shop background on small screens

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -11,5 +11,8 @@
 	html,
 	body {
 		font-family: 'Comic Sans MS';
+		min-height: 100%;
+		margin: 0;
+		padding: 0;
 	}
 }
